fix: tweaking save status spacing to be same as buttons

--- a/src/assets/stylesheets/SaveStatus.scss
+++ b/src/assets/stylesheets/SaveStatus.scss
@@ -8,7 +8,7 @@
   gap: $space-0-25;
   justify-content: flex-end;
   margin-block: 0;
-  padding-inline: var(--space-1);
+  padding-inline: var(--space-2);
 }
 
 .save-status--mobile {
